--- a/style2.css
+++ b/style2.css
@@ -5,3 +5,13 @@
 h6, label{
     text-align: center;
 }
+
+#tabla{
+  width: 100%;
+  text-align: center;
+}
+
+#tabla1{
+  width: 100%;
+  text-align: center;
+}
