--- a/style2.css
+++ b/style2.css
@@ -15,6 +15,10 @@ h6, label{
   width: 100%;
   text-align: center;
 }
+#tabla2 {
+  width: 100%;
+  text-align: center;
+}
 
 .tablas{
   text-align: center;
