--- a/style2.css
+++ b/style2.css
@@ -19,6 +19,10 @@ h6, label{
   width: 100%;
   text-align: center;
 }
+#tabla3 {
+  width: 100%;
+  text-align: center;
+}
 
 .tablas{
   text-align: center;
